# monday_app

./: .env.dev  .gitignore  README.md  pyproject.toml  ruff.toml
app/: config.py  main.py
